--- a/크레인 인형뽑기.ipynb
+++ b/크레인 인형뽑기.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "id": "fe6f4456-46b6-4dd4-8626-4e3e24c1f345",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 64,
    "id": "64753529-c8ef-4f1e-9723-623774690791",
    "metadata": {},
    "outputs": [],
@@ -87,9 +87,9 @@
     "                basket.append(board[j][position])    # 0이 아니면 바구니로 옮기기\n",
     "                board[j][position] = 0\n",
     "\n",
-    "                if basket[len(basket) - 1] == basket[len(basket) - 2]:    # 바구니에 중복되는 인형이 2개 연속 담기면\n",
-    "                    del(basket[len(basket) - 1])\n",
-    "                    del(basket[len(basket) - 1])\n",
+    "                if basket[-1] == basket[-2]:    # 바구니에 중복되는 인형이 2개 연속 담기면\n",
+    "                    basket.pop(-1)\n",
+    "                    basket.pop(-1)\n",
     "                    answer += 2                       # # 인형 둘 다 사라지고 answer에 2를 더함.\n",
     "\n",
     "                else:\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "id": "b9ca18fd-7494-41fe-830b-69cb5e2cf4a0",
    "metadata": {},
    "outputs": [
